added some html and css codes

--- a/index.html
+++ b/index.html
@@ -3,9 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/main.css">
     <title>Apple old web page clone</title>
 </head>
 <body>
-    
+    <section class="main">
+
+        <div class="main-body">
+            <nav class="nav-bar">
+                <ul class="ul-1">
+                    <li>item1</li>
+                    <li>item1</li>
+                    <li>item1</li>
+                    <li>item1</li>
+                    <li>item1</li>
+                    <li>item1</li>
+                    <li>item1</li>
+                    <li>item1</li>
+                    <li>item1</li>
+                </ul>
+            </nav>
+        </div>
+    </section>
+    <div class="thumbnails">
+        <img src="/images/thumb-1.jpg" alt="">
+        <img src="/images/thumb-2.jpg" alt="">
+        <img src="/images/thumb-3.jpg" alt="">
+        <img src="/images/thumb-4.jpg" alt="">
+    </div>
+    <footer class="main-footer">
+        <div class="footer-1">
+            Shop the Apple Online Store (1-800-MY-APPLE), visit an Apple Retail Store, or find a reseller.
+        </div>
+        <div class="footer-2">
+            Copyright © 2014 Apple Inc. All rights reserved. Terms of UsePrivacy Policy
+        </div>
+        <p class="footer-p">
+            <ul class="ul-2">
+                <li>Site Map</li>
+                <li>Hot News</li>
+                <li>RSS Feeds</li>
+                <li>Media Info</li>
+                <li>Environments</li>
+                <li>Job Opportunities</li>
+                <li>Contact Us</li>
+                <li><img src="/images/icone.png" alt=""></li>
+            </ul>
+        </p>
+    </footer>
 </body>
 </html>
