added background text

--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
                 </ul>
             </nav>
         </div>
+        <div class="body-text">
+            <p id="body-text-p1">what will your verse be ?</p>
+            Everyone has something to share. See how people are using <br>
+            ipad in their unique ways to add to the world's story. <br>
+            <p id="body-text-p2">
+                Watch the "Your Verse" film and explore the stories
+            </p>
+        </div>
     </section>
     <div class="thumbnails">
         <img src="/images/thumb-1.jpg" alt="">
