--- a/index.html
+++ b/index.html
@@ -4,25 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css">
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.13.1/css/all.css"
+      integrity="sha384-xxzQGERXS00kBmZW/6qxqJPyxW3UR0BPsL4c8ILaIWXva5kFi7TxkIIaMiKtqV1Q"
+      crossorigin="anonymous"
+    />
     <title>Apple old web page clone</title>
 </head>
 <body>
     <section class="main">
-        <div class="main-body">
-            <nav>
-                <ul class="ul-1">
-                    <li>item1</li>
-                    <li>item1</li>
-                    <li>item1</li>
-                    <li>item1</li>
-                    <li>item1</li>
-                    <li>item1</li>
-                    <li>item1</li>
-                    <li>item1</li>
-                    <li>item1</li>
-                </ul>
-            </nav>
-        </div>
+        <nav>
+            <ul class="ul-1">
+                <li><a href="#"><i class="fab fa-apple"></i></a></li>
+                <li><a href="#">Store</a></li>
+                <li><a href="#">Mac</a></li>
+                <li><a href="#">iPod</a></li>
+                <li><a href="#">iPhone</a></li>
+                <li><a href="#">iPad</a></li>
+                <li><a href="#">iTunes</a></li>
+                <li><a href="#">Support</a></li>
+                <li>
+                   <input class="search-input" type="search"/>
+                </li>
+                <i class="fas fa-search"></i>
+            </ul>
+        </nav>
         <div class="body-text">
             <p id="body-text-p1">what will your verse be ?</p>
             Everyone has something to share. See how people are using <br>
