fixin html syntax

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <li>
                    <input class="search-input" type="search"/>
                 </li>
-                <i class="fas fa-search"></i>
+                <li><i class="fas fa-search"></i></li>
             </ul>
         </nav>
         <div class="body-text">
