--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/main.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/main.css" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.13.1/css/all.css"
@@ -11,59 +11,65 @@
       crossorigin="anonymous"
     />
     <title>Apple old web page clone</title>
-</head>
-<body>
+  </head>
+  <body>
     <section class="main">
-        <nav>
-            <ul class="ul-1">
-                <li><a href="#"><i class="fab fa-apple"></i></a></li>
-                <li><a href="#">Store</a></li>
-                <li><a href="#">Mac</a></li>
-                <li><a href="#">iPod</a></li>
-                <li><a href="#">iPhone</a></li>
-                <li><a href="#">iPad</a></li>
-                <li><a href="#">iTunes</a></li>
-                <li><a href="#">Support</a></li>
-                <li>
-                   <input class="search-input" type="search"/>
-                </li>
-                <li><i class="fas fa-search"></i></li>
-            </ul>
-        </nav>
-        <div class="body-text">
-            <p id="body-text-p1">what will your verse be ?</p>
-            Everyone has something to share. See how people are using <br>
-            ipad in their unique ways to add to the world's story. <br>
-            <p id="body-text-p2">
-                Watch the "Your Verse" film and explore the stories
-            </p>
-        </div>
+      <nav>
+        <ul class="ul-1">
+          <li>
+            <a href="#"><i class="fab fa-apple"></i></a>
+          </li>
+          <li><a href="#">Store</a></li>
+          <li><a href="#">Mac</a></li>
+          <li><a href="#">iPod</a></li>
+          <li><a href="#">iPhone</a></li>
+          <li><a href="#">iPad</a></li>
+          <li><a href="#">iTunes</a></li>
+          <li><a href="#">Support</a></li>
+          <li>
+            <input class="search-input" type="search" />
+          </li>
+          <li><i class="fas fa-search"></i></li>
+        </ul>
+      </nav>
+      <div class="body-text">
+        <p id="body-text-p1">what will your verse be ?</p>
+        Everyone has something to share. See how people are using <br />
+        ipad in their unique ways to add to the world's story. <br />
+        <p id="body-text-p2">
+          Watch the "Your Verse" film and explore the stories
+        </p>
+      </div>
     </section>
     <div class="thumbnails">
-        <img src="/images/thumb-1.jpg" alt="">
-        <img src="/images/thumb-2.jpg" alt="">
-        <img src="/images/thumb-3.jpg" alt="">
-        <img src="/images/thumb-4.jpg" alt="">
+      <img src="/images/thumb-1.jpg" alt="" />
+      <img src="/images/thumb-2.jpg" alt="" />
+      <img src="/images/thumb-3.jpg" alt="" />
+      <img src="/images/thumb-4.jpg" alt="" />
     </div>
     <footer class="main-footer">
-        <div class="footer-1">
-            Shop the <a href="#">Apple Online Store</a>  (1-800-MY-APPLE), visit an <a href="#">Apple Retail Store</a>, or find a <a href="#">reseller</a>
-        </div>
-        <p class="footer-p">
-            <ul class="ul-2">
-                <li>Site Map | </li>
-                <li>Hot News | </li>
-                <li>RSS Feeds | </li>
-                <li>Media Info | </li>
-                <li>Environments | </li>
-                <li>Job Opportunities | </li>
-                <li>Contact Us | </li>
-                <li><img class="img-footer" src="/images/icone.png" alt=""></li>
-            </ul>
-        </p>
-        <div class="footer-2">
-            Copyright © 2014 Apple Inc. All rights reserved.<a href="#">Terms of Use</a> | <a href="#">Privacy Policy</a>   
-        </div>
+      <div class="footer-1">
+        Shop the <a href="#">Apple Online Store</a> (1-800-MY-APPLE), visit an
+        <a href="#">Apple Retail Store</a>, or find a <a href="#">reseller</a>
+      </div>
+      <div class="footer-p">
+        <ul class="ul-2">
+          <li>Site Map |</li>
+          <li>Hot News |</li>
+          <li>RSS Feeds |</li>
+          <li>Media Info |</li>
+          <li>Environments |</li>
+          <li>Job Opportunities |</li>
+          <li>Contact Us |</li>
+          <li><img class="img-footer" src="/images/icone.png" alt="" /></li>
+        </ul>
+      </div>
+      <div class="footer-2">
+        Copyright © 2014 Apple Inc. All rights reserved.<a href="#"
+          >Terms of Use</a
+        >
+        | <a href="#">Privacy Policy</a>
+      </div>
     </footer>
-</body>
+  </body>
 </html>
