fixed p tag in html

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         Shop the <a href="#">Apple Online Store</a> (1-800-MY-APPLE), visit an
         <a href="#">Apple Retail Store</a>, or find a <a href="#">reseller</a>
       </div>
-      <div class="footer-p">
+      <div>
         <ul class="ul-2">
           <li>Site Map |</li>
           <li>Hot News |</li>
