fixing image problem

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
       </div>
     </section>
     <div class="thumbnails">
-      <img src="/images/thumb-1.jpg" alt="" />
-      <img src="/images/thumb-2.jpg" alt="" />
-      <img src="/images/thumb-3.jpg" alt="" />
-      <img src="/images/thumb-4.jpg" alt="" />
+      <img src="images/thumb-1.jpg" alt="" />
+      <img src="images/thumb-2.jpg" alt="" />
+      <img src="images/thumb-3.jpg" alt="" />
+      <img src="images/thumb-4.jpg" alt="" />
     </div>
     <footer class="main-footer">
       <div class="footer-1">
