Add link to a list

--- a/index.html
+++ b/index.html
@@ -38,14 +38,15 @@
         ipad in their unique ways to add to the world's story. <br />
         <p id="body-text-p2">
           Watch the "Your Verse" film and explore the stories
+          <a href=""><i class="fas fa-chevron-circle-right"></i></a>
         </p>
       </div>
     </section>
     <div class="thumbnails">
-      <img src="images/thumb-1.jpg" alt="" />
-      <img src="images/thumb-2.jpg" alt="" />
-      <img src="images/thumb-3.jpg" alt="" />
-      <img src="images/thumb-4.jpg" alt="" />
+      <a href="#"><img src="images/thumb-1.jpg" alt="" /></a>
+      <a href="#"><img src="images/thumb-2.jpg" alt="" /></a>
+      <a href="#"><img src="images/thumb-3.jpg" alt="" /></a>
+      <a href="#"><img src="images/thumb-4.jpg" alt="" /></a>
     </div>
     <footer class="main-footer">
       <div class="footer-1">
@@ -54,14 +55,16 @@
       </div>
       <div>
         <ul class="ul-2">
-          <li>Site Map |</li>
-          <li>Hot News |</li>
-          <li>RSS Feeds |</li>
-          <li>Media Info |</li>
-          <li>Environments |</li>
-          <li>Job Opportunities |</li>
-          <li>Contact Us |</li>
-          <li><img class="img-footer" src="/images/icone.png" alt="" /></li>
+          <a href=""><li>Site Map |</li></a>
+          <a href=""><li>Hot News |</li></a>
+          <a href=""><li>RSS Feeds |</li></a>
+          <a href=""><li>Media Info |</li></a>
+          <a href=""><li>Environments |</li></a>
+          <a href=""><li>Job Opportunities |</li></a>
+          <a href=""><li>Contact Us |</li></a>
+          <a href=""
+            ><li><img class="img-footer" src="/images/icone.png" alt="" /></li
+          ></a>
         </ul>
       </div>
       <div class="footer-2">
