fixed linters error

--- a/index.html
+++ b/index.html
@@ -55,16 +55,18 @@
       </div>
       <div>
         <ul class="ul-2">
-          <a href=""><li>Site Map |</li></a>
-          <a href=""><li>Hot News |</li></a>
-          <a href=""><li>RSS Feeds |</li></a>
-          <a href=""><li>Media Info |</li></a>
-          <a href=""><li>Environments |</li></a>
-          <a href=""><li>Job Opportunities |</li></a>
-          <a href=""><li>Contact Us |</li></a>
-          <a href=""
-            ><li><img class="img-footer" src="/images/icone.png" alt="" /></li
-          ></a>
+          <li><a href="">Site Map |</a></li>
+          <li><a href="">Hot News |</a></li>
+          <li><a href="">RSS Feeds |</a></li>
+          <li><a href="">Media Info |</a></li>
+          <li><a href="">Environments |</a></li>
+          <li><a href="">Job Opportunities |</a></li>
+          <li><a href="">Contact Us |</a></li>
+          <li>
+            <a href=""
+              ><img class="img-footer" src="/images/icone.png" alt=""
+            /></a>
+          </li>
         </ul>
       </div>
       <div class="footer-2">
