fix background img

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/styles.css" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.13.1/css/all.css"
@@ -43,10 +43,10 @@
       </div>
     </section>
     <div class="thumbnails">
-      <a href="#"><img src="images/thumb-1.jpg" alt="" /></a>
-      <a href="#"><img src="images/thumb-2.jpg" alt="" /></a>
-      <a href="#"><img src="images/thumb-3.jpg" alt="" /></a>
-      <a href="#"><img src="images/thumb-4.jpg" alt="" /></a>
+      <a href="#"><img src="img/thumb-1.jpg" alt="" /></a>
+      <a href="#"><img src="img/thumb-2.jpg" alt="" /></a>
+      <a href="#"><img src="img/thumb-3.jpg" alt="" /></a>
+      <a href="#"><img src="img/thumb-4.jpg" alt="" /></a>
     </div>
     <footer class="main-footer">
       <div class="footer-1">
