fixed missing footer icon

--- a/index.html
+++ b/index.html
@@ -64,15 +64,13 @@
           <li><a href="">Contact Us |</a></li>
           <li>
             <a href=""
-              ><img class="img-footer" src="/images/icone.png" alt=""
+              ><img class="img-footer" src="/img/icone.png" alt=""
             /></a>
           </li>
         </ul>
       </div>
       <div class="footer-2">
-        Copyright © 2014 Apple Inc. All rights reserved.<a href="#"
-          >Terms of Use</a
-        >
+        Copyright © 2014 Apple Inc. All rights reserved.<a href="#">Terms of Use</a>
         | <a href="#">Privacy Policy</a>
       </div>
     </footer>
