fixed linters error

--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
         </ul>
       </div>
       <div class="footer-2">
-        Copyright © 2014 Apple Inc. All rights reserved.<a href="#">Terms of Use</a>
+        Copyright © 2014 Apple Inc. All rights reserved.<a href="#"
+          >Terms of Use</a
+        >
         | <a href="#">Privacy Policy</a>
       </div>
     </footer>
