--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
         </ul>
       </nav>
       <div class="body-text">
-        <p id="body-text-p1">what will your verse be ?</p>
+        <p class="body-text-p1">what will your verse be ?</p>
         Everyone has something to share. See how people are using <br />
         ipad in their unique ways to add to the world's story. <br />
-        <p id="body-text-p2">
+        <p class="body-text-p2">
           <a href="">Watch the "Your Verse" film and explore the stories</a>
           <a href=""><i class="fas fa-chevron-circle-right"></i></a>
         </p>
