add a property of color white and display flex

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <title>Apple old web page clone</title>
   </head>
   <body>
-    <section class="main">
+    <main class="flex">
       <nav>
-        <ul class="ul-1">
+        <ul class="ul-1 flex">
           <li>
             <a href="#"><i class="fab fa-apple"></i></a>
           </li>
@@ -29,47 +29,51 @@
           <li>
             <input class="search-input" type="search" />
           </li>
-          <li><i class="fas fa-search"></i></li>
+          <li><i class="fas fa-search color-white"></i></li>
         </ul>
       </nav>
-      <div class="body-text">
+      <div class="body-text color-white">
         <p class="body-text-p1">what will your verse be ?</p>
         Everyone has something to share. See how people are using <br />
         ipad in their unique ways to add to the world's story. <br />
         <p class="body-text-p2">
-          <a href="">Watch the "Your Verse" film and explore the stories</a>
-          <a href=""><i class="fas fa-chevron-circle-right"></i></a>
+          <a class="color-white" href="#"
+            >Watch the "Your Verse" film and explore the stories</a
+          >
+          <a href="#"
+            ><i class="fas fa-chevron-circle-right color-white"></i
+          ></a>
         </p>
       </div>
-    </section>
-    <div class="thumbnails">
+    </main>
+    <div class="thumbnails flex">
       <a href="#"><img src="img/thumb-1.jpg" alt="" /></a>
       <a href="#"><img src="img/thumb-2.jpg" alt="" /></a>
       <a href="#"><img src="img/thumb-3.jpg" alt="" /></a>
       <a href="#"><img src="img/thumb-4.jpg" alt="" /></a>
     </div>
-    <footer class="main-footer">
-      <div class="footer-1">
+    <footer class="main-footer flex">
+      <div class="footer-1 flex">
         Shop the <a href="#">Apple Online Store</a> (1-800-MY-APPLE), visit an
         <a href="#">Apple Retail Store</a>, or find a <a href="#">reseller</a>
       </div>
       <div>
-        <ul class="ul-2">
-          <li><a href="">Site Map |</a></li>
-          <li><a href="">Hot News |</a></li>
-          <li><a href="">RSS Feeds |</a></li>
-          <li><a href="">Media Info |</a></li>
-          <li><a href="">Environments |</a></li>
-          <li><a href="">Job Opportunities |</a></li>
-          <li><a href="">Contact Us |</a></li>
-          <li>
+        <ul class="ul-2 flex">
+          <li class="flex"><a href="">Site Map |</a></li>
+          <li class="flex"><a href="">Hot News |</a></li>
+          <li class="flex"><a href="">RSS Feeds |</a></li>
+          <li class="flex"><a href="">Media Info |</a></li>
+          <li class="flex"><a href="">Environments |</a></li>
+          <li class="flex"><a href="">Job Opportunities |</a></li>
+          <li class="flex"><a href="">Contact Us |</a></li>
+          <li class="flex">
             <a href=""
               ><img class="img-footer" src="/img/icone.png" alt=""
             /></a>
           </li>
         </ul>
       </div>
-      <div class="footer-2">
+      <div class="footer-2 flex">
         Copyright © 2014 Apple Inc. All rights reserved.<a href="#"
           >Terms of Use</a
         >
