--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
       <nav>
         <ul class="ul-1 flex">
           <li>
-            <a href="#"><i class="fab fa-apple"></i></a>
+            <a class="flex" href="#"><i class="fab fa-apple"></i></a>
           </li>
-          <li><a href="#">Store</a></li>
-          <li><a href="#">Mac</a></li>
-          <li><a href="#">iPod</a></li>
-          <li><a href="#">iPhone</a></li>
-          <li><a href="#">iPad</a></li>
-          <li><a href="#">iTunes</a></li>
-          <li><a href="#">Support</a></li>
+          <li><a class="flex" href="#">Store</a></li>
+          <li><a class="flex" href="#">Mac</a></li>
+          <li><a class="flex" href="#">iPod</a></li>
+          <li><a class="flex" href="#">iPhone</a></li>
+          <li><a class="flex" href="#">iPad</a></li>
+          <li><a class="flex" href="#">iTunes</a></li>
+          <li><a class="flex" href="#">Support</a></li>
           <li>
             <input class="search-input" type="search" />
           </li>
@@ -33,9 +33,13 @@
         </ul>
       </nav>
       <div class="body-text color-white">
-        <p class="body-text-p1">what will your verse be ?</p>
-        Everyone has something to share. See how people are using <br />
-        ipad in their unique ways to add to the world's story. <br />
+        <p class="body-text-p1">
+          <a class="color-white" href="#">what will your verse be ?</a>
+        </p>
+        <a class="color-white" href="#"
+          >Everyone has something to share. See how people are using <br />
+          ipad in their unique ways to add to the world's story. <br
+        /></a>
         <p class="body-text-p2">
           <a class="color-white" href="#"
             >Watch the "Your Verse" film and explore the stories</a
@@ -47,10 +51,10 @@
       </div>
     </main>
     <div class="thumbnails flex">
-      <a href="#"><img src="img/thumb-1.jpg" alt="" /></a>
-      <a href="#"><img src="img/thumb-2.jpg" alt="" /></a>
-      <a href="#"><img src="img/thumb-3.jpg" alt="" /></a>
-      <a href="#"><img src="img/thumb-4.jpg" alt="" /></a>
+      <a href="#"><img class="flex" src="img/thumb-1.jpg" alt="" /></a>
+      <a href="#"><img class="flex" src="img/thumb-2.jpg" alt="" /></a>
+      <a href="#"><img class="flex" src="img/thumb-3.jpg" alt="" /></a>
+      <a href="#"><img class="flex" src="img/thumb-4.jpg" alt="" /></a>
     </div>
     <footer class="main-footer flex">
       <div class="footer-1 flex">
